<resources>
    <string name="app_name">Venue Locator</string>

    <!-- Application -->
    <string name="google_app_id"> 874470300389 </string>

    <string name="title_activity_main">Venue Locator - Main</string>
    <string name="title_activity_details">Venue Locator - Details</string>

    <!-- Menu -->
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings_login_en">English</string>
    <string name="action_settings_login_ru">Russian</string>

    <!-- About activity -->
    <string name="title_about">About</string>
    <string name="aboutText">
        Here is a small venues locator application. It locates your position
        (both via GPS or network services) and prepares nearest venue points
        requesting Foursquare server.\n
        Also, You can tap on the map to show local venue points independently
        of your physical location.
        The resulting venues are displayed as a list of venues header info
        with corresponding markers at the map.\n
        You can click on the header to view corresponding map closer, or click
        arrow → to get additional information about the venue.
    </string>

    <!-- GoogleApi -->
    <string name="dlgGoogleApiFailedTitle">Google Play services problem</string>
    <string name="dlgGoogleApiFailedMessage">Google Play services is not installed or disabled
        on your device, or needs update</string>


    <!-- LocationClient -->
    <string name="dlgLocationServiceFailedTitle">Location failed</string>
    <string name="dlgLocationServiceFailedMessage">Unable to define location (GPS and networks are
        disabled). Check your location services.</string>
    <string name="butPosLocationServiceFix">Open location services</string>
    <string name="butNegLocationServiceFix">Cancel</string>

    <string name="tstLocationProviderDisabled">Location provider (%1$s) disabled"</string>
    <string name="tstLocationProviderEnabled">Location provider (%1$s) enabled"</string>

    <!-- FoursquareClient -->
    <string name="dlgHTTPServiceFailedTitle">Network failed</string>
    <string name="dlgHTTPServiceFailedMessage">Unable to search venues. Check your network connection.</string>

    <!-- MapClient -->
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyCzIlbrnmmXgCz71wIsnJM6S1QHv78fSkw </string>
    <string name="tstTapIgnoringExplanation">Your tap position is too close to your current location.</string>
    <string name="tstMoveSuggestion">Change your physical position or tap at the map to refresh venues..</string>
    <string name="dlgGettingAccess2GoogleMap">Getting access to Google Map...</string>
    <string name="bt1">Move!</string>
    <string name="bt2">Loc2</string>

    <!-- Venues list -->
    <string name="tvVenuesListHeader">Venues close to You:</string>
    <string name="tvVenuesListEmpty">Sorry, there are No venues. Keep moving..</string>
    <string name="dlgGettingVenuesList">Updating venues list...</string>

    <!-- Detail information fields -->
    <string name="tvDetailTabHeader">Venue details</string>
    <string name="tvDetailNameLabel">Name</string>
    <string name="tvDetailCategoryLabel">Category</string>
    <string name="tvDetailAddressCityLabel">City</string>
    <string name="tvDetailAddressLabel">Address</string>
    <string name="tvDetailAddressCrossStreetLabel">CrossStreet</string>
</resources>



