<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tlDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_gravity="center|top"
    tools:context=".DetailsActivity">
    <TableRow
        android:id="@+id/tableRowHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tvDetailTabHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/tvDetailTabHeader"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRowName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvDetailNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/tvDetailNameLabel"/>
        <View
            style="@style/VDividerView"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvDetailName"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRowCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvDetailCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/tvDetailCategoryLabel"/>
        <View
            style="@style/VDividerView"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvDetailCategory"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRowAddressCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvDetailAddressCityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/tvDetailAddressCityLabel"/>
        <View
            style="@style/VDividerView"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvDetailAddressCity"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:id="@+id/tableRowAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvDetailAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/tvDetailAddressLabel"/>
        <View
            style="@style/VDividerView"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvDetailAddress"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
</TableLayout>
